--- a/.github/workflows/build_docker.yml
+++ b/.github/workflows/build_docker.yml
@@ -26,8 +26,8 @@ jobs:
       - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_PASS }}
       - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v4
@@ -37,5 +37,5 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           platforms: linux/amd64,linux/arm64
           tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/chatgpt-web:${{ github.ref_name }}
-            ${{ secrets.DOCKERHUB_USERNAME }}/chatgpt-web:latest
+            ${{ secrets.DOCKERHUB_USER }}/chatgpt-web:${{ github.ref_name }}
+            ${{ secrets.DOCKERHUB_USER }}/chatgpt-web:latest
